# agente-iris

./: .dockerignore  .gitignore  AVALIACAO_CODIGO.md  Dockerfile  README.md  REFATORACAO_RESUMO.md  check_eval.py  final_test.py  iris.json  pyproject.toml  render.yaml
.github/workflows/: ci.yml  daily_index.yml
app/: __init__.py  main.py
app/agent/: evaluator.py  iris_orchestrator.py  tools.py
app/agent/specialists/: __init__.py  clinical_rag.py  sql_analyst.py
app/api/: audio.py  chat.py  indexer_router.py  iris_chat.py  metrics.py  security.py  voice.py  ws.py
app/core/: clients.py  config.py  logger.py  observability.py
app/services/: analysis.py  cache.py  decision.py  evaluation_store.py  extractor.py  guardrails.py  intent.py  learning.py  llm.py  mcp_client.py  memory.py  prontuario_indexer.py  schemas.py  sql_generator.py  transcription.py  validator.py
app/skills/: performance_audit.py
app/tools/: athena.py  performance.py  prontuario_search.py  rag.py  transcription.py
app/utils/: dates.py  streaming.py
scripts/: run_historical_index.py
tests/: conftest.py  test_basics.py  test_caracterizacao.py  test_caracterizacao_v2.py  test_extractor.py  test_judge_metric_only.py
