[project]
name = "projeto-iris"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.85",
    "fastapi>=0.135.3",
    "langchain>=0.3.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.26",
    "langchain-openai>=1.1.12",
    "langchain-pinecone>=0.2.13",
    "pyathena>=3.30.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.44.0",
    "tzdata>=2026.1",
    "psycopg[binary]>=3.3.3",
    "loguru>=0.7.3",
    "langsmith>=0.7.26",
    "langchain-postgres>=0.0.17",
    "pinecone>=7.3.0",
    "langchain-anthropic>=1.4.0",
    "pypdf>=6.10.2",
    "langchain-text-splitters>=1.1.1",
    "websockets>=16.0",
    "python-multipart>=0.0.27",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
