[project]
name = "projeto-iris"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.85",
    "fastapi>=0.135.3",
    "langchain>=0.3.0",
    "asyncpg>=0.30.0",
    "langchain-core>=1.2.26",
    "langchain-openai>=1.1.12",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",

    "python-dotenv>=1.2.2",
    "uvicorn>=0.44.0",
    "tzdata>=2026.1",

    "loguru>=0.7.3",
    "langsmith>=0.7.26",
    "langgraph>=0.2.20",

    "langchain-anthropic>=1.4.0",
    "pypdf>=6.10.2",
    "langchain-text-splitters>=1.1.1",
    "httpx>=0.28.1",
    "langchain-mcp-adapters",
    "mcp",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
norecursedirs = ["scratch", ".venv"]
addopts = "--ignore=scratch"
pythonpath = ["."]
